# proof-surface-report

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml
docs/brand/: README.md
examples/: README.md  demo.py  emet.receipt.json  provenance.packet.json  public-surface.packet.json
project-docs/specs/: SPEC-proof-surface-report-forward-delivery.md
src/proof_surface_report/: __init__.py  __main__.py  cli.py  core.py
tests/: test_proof_surface_report.py
