[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proof-surface-report"
version = "0.1.0"
description = "Render proof-surface packets and receipts as reviewer-facing Markdown; rejects authority-shaped language on output."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["proof-surface", "evidence", "markdown", "report", "handoff"]
dependencies = ["proof-surface>=0.1"]

[project.scripts]
proof-surface-report = "proof_surface_report.cli:run"

[project.urls]
Homepage = "https://github.com/HarperZ9/proof-surface-report"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
